css/style.css
@font-face {
    font-family: 'Inconsolata';
    src: url("../fonts/Inconsolata.ttf");
}

@font-face {
    font-family: 'Hack';
    src: url("../fonts/Hack-Regular.ttf");
}

html {
    background-color: rgb(24, 24, 24);
}

body {
    font-family: 'Inconsolata', serif;
    color: rgb(240, 240, 240);
    font-size: 18px;
    margin: 0px;
}

h1, h2, h3, h4, h5, h6 {
    font-family: 'Inconsolata', serif;
}

code {
    font-family: "Hack", monospace;
    background-color: #011627;
    color: #82AAFF;
    border-radius: 3px;
    max-width: 100%;
}

pre {
    width: 100%;
}

.container {
    display: flex;
    flex-direction: column;
    justify-content: flex-start;
    align-items: center;
}

.container .header {
    justify-self: flex-start;
}

.container .content {
    display: flex;
    flex-direction: column;
    justify-content: flex-start;
    align-items: center;
    max-width: 60%;
    line-height: 1.4;
}

.container .content hr {
    width: 100%;
}

.container .content p {
    width: 100%;
}

.container .content img {
    max-width: 100%;
}

.container .content a:link {
    border-bottom: dotted 1px;
    text-decoration: none;
    color: inherit;
}

.container .content a:hover {
    border-bottom: solid;
}

.container .content a:visited {
    color: inherit;
}

.container .content .detail {
    width: 100%;
}

.container .content .detail-left {
    float: left;
}

.container .content .detail-right {
    float: right;
}

.container .content .menu-link {
    text-align: center;
}

.container .content .tag {
    width: auto;
    height: auto;
    border-radius: 4px;
    padding-left: 3px;
    padding-right: 3px;
}

.container .content .with-tag {
    display: flex;
    flex-direction: row;
    justify-content: flex-start;
    align-items: center;
}

.container .footer {
    justify-self: flex-end;
    max-width: 100%;
    overflow: hidden;
}

#headshot {
    margin-top: 10%;
    transition: transform .8s ease-in-out;
}

#headshot:hover {
    transform: rotate(360deg);
}

::selection {
    color: rgb(24, 24, 24);
    background: rgb(240, 240, 240);
}

@media only screen and (max-width: 800px) {
    .container .content {
        max-width: 90%;
    }
}

/* Colors */
.projects {color:#f1b3f1;}
.experience {color: #39ffba;}
.blog {color: #94bfff;}
.projects_alt {background:#f1b3f1;}
.experience_alt {background: #39ffba;}
.blog_alt {background: #94bfff;}
.github {color: #8cc665;}
.twitter {color: #6CB5E8;}
.umich {
    background-color: #00274C;
    color: #FFCB0B;
}
.copyright {color: rgb(96, 96, 96);}

